--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             min-height: 100vh;
             margin: 0;
             padding: 0;
-            position: relative; /* Agregado */
+            position: relative;
         }
         h1 {
             color: #0f0;
@@ -63,16 +63,24 @@
             margin: 0;
         }
         #particles-js {
-            position: fixed; /* Cambiado a fixed */
+            position: fixed;
             width: 100%;
             height: 100%;
             top: 0;
             left: 0;
             z-index: 0;
-            pointer-events: none; /* Evita que las partículas interfieran con el contenido */
+            pointer-events: none;
         }
         .content {
-            z-index: 1; /* Asegura que el contenido esté por encima de las partículas */
+            z-index: 1;
+        }
+        #auth-container {
+            margin-top: 20px;
+            z-index: 1;
+        }
+        #auth-message {
+            margin-top: 10px;
+            font-size: 1em;
         }
     </style>
 </head>
@@ -80,7 +88,12 @@
     <div id="particles-js"></div>
     <div class="content">
         <h1>Evaluaciones Ciencia y Tecnología</h1>
-        <div class="button-container">
+        <div id="auth-container">
+            <input type="text" id="nie-input" placeholder="Ingrese su NIE" />
+            <button id="auth-button">Acceder</button>
+            <p id="auth-message"></p>
+        </div>
+        <div class="button-container" id="button-container" style="display: none;">
             <button onclick="location.href='https://gestapo111.github.io/1.github.io/'">EL TRABAJO CIENTÍFICO</button>
             <button onclick="location.href='https://gestapo111.github.io/2.github.io/'">CONOZCAMOS LOS FLUIDOS</button>
             <button onclick="location.href='https://gestapo111.github.io/3.github.io/'">PRINCIPIOS DE ELECTRICIDAD</button>
@@ -99,6 +112,27 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
     <script>
+        // NIE Authorization
+        const authorizedNIEs = [
+            "4267837", "3850952", "3851018", "5032035", "19806181", "6297536",
+            "2608724", "6262810", "4267838", "20162435", "3850923", "19806209",
+            "4267828", "3850942"
+        ];
+
+        document.getElementById('auth-button').addEventListener('click', function() {
+            const nieInput = document.getElementById('nie-input').value.trim();
+            const messageElement = document.getElementById('auth-message');
+            if (authorizedNIEs.includes(nieInput)) {
+                document.getElementById('auth-container').style.display = 'none';
+                document.getElementById('button-container').style.display = 'flex';
+                messageElement.textContent = '';
+            } else {
+                messageElement.textContent = 'NIE no autorizado. Inténtelo de nuevo.';
+                messageElement.style.color = 'red';
+            }
+        });
+
+        // Particles.js configuration
         particlesJS('particles-js', {
             "particles": {
                 "number": {
