--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             <button onclick="location.href='https://gestapo111.github.io/9.github.io/'">LA TIERRA Y EL SER HUMANO</button>
             <button onclick="location.href='https://gestapo111.github.io/10.github.io/'">POBLACIÓN Y MEDIO AMBIENTE</button>
             <button onclick="location.href='https://gestapo111.github.io/11.github.io/'">PROBLEMAS ECOLÓGICOS</button>
+            <button onclick="location.href='https://gestapo111.github.io/12.github.io/'">LEGISLACION AMBIENTAL</button>
         </div>
         <footer>
             <p>&copy; Derechos Reservados Prof. Alberto Sanchez</p>
