--- a/index.html
+++ b/index.html
@@ -94,18 +94,18 @@
             <p id="auth-message"></p>
         </div>
         <div class="button-container" id="button-container" style="display: none;">
-            <button onclick="location.href='https://gestapo111.github.io/1.github.io/'">EL TRABAJO CIENTÍFICO</button>
-            <button onclick="location.href='https://gestapo111.github.io/2.github.io/'">CONOZCAMOS LOS FLUIDOS</button>
-            <button onclick="location.href='https://gestapo111.github.io/3.github.io/'">PRINCIPIOS DE ELECTRICIDAD</button>
-            <button onclick="location.href='https://gestapo111.github.io/4.github.io/'">FENÓMENOS ELECTROMAGNÉTICOS</button>
-            <button onclick="location.href='https://gestapo111.github.io/5.github.io/'">LAS ONDAS</button>
-            <button onclick="location.href='https://gestapo111.github.io/6.github.io/'">INTERACCIONES DE LA MATERIA</button>
-            <button onclick="location.href='https://gestapo111.github.io/7.github.io/'">QUÍMICA ORGÁNICA</button>
-            <button onclick="location.href='https://gestapo111.github.io/8.github.io/'">CLASIFICANDO A LOS SERES VIVOS</button>
-            <button onclick="location.href='https://gestapo111.github.io/9.github.io/'">LA TIERRA Y EL SER HUMANO</button>
-            <button onclick="location.href='https://gestapo111.github.io/10.github.io/'">POBLACIÓN Y MEDIO AMBIENTE</button>
-            <button onclick="location.href='https://gestapo111.github.io/11.github.io/'">PROBLEMAS ECOLÓGICOS</button>
-            <button onclick="location.href='https://gestapo111.github.io/12.github.io/'">LEGISLACION AMBIENTAL</button>
+            <button onclick="location.href='https://gestapo111.github.io/1.github.io/'">1.EL TRABAJO CIENTÍFICO</button>
+            <button onclick="location.href='https://gestapo111.github.io/2.github.io/'">2.CONOZCAMOS LOS FLUIDOS</button>
+            <button onclick="location.href='https://gestapo111.github.io/3.github.io/'">3.PRINCIPIOS DE ELECTRICIDAD</button>
+            <button onclick="location.href='https://gestapo111.github.io/4.github.io/'">4.FENÓMENOS ELECTROMAGNÉTICOS</button>
+            <button onclick="location.href='https://gestapo111.github.io/5.github.io/'">5.LAS ONDAS</button>
+            <button onclick="location.href='https://gestapo111.github.io/6.github.io/'">6.INTERACCIONES DE LA MATERIA</button>
+            <button onclick="location.href='https://gestapo111.github.io/7.github.io/'">7.QUÍMICA ORGÁNICA</button>
+            <button onclick="location.href='https://gestapo111.github.io/8.github.io/'">8.CLASIFICANDO A LOS SERES VIVOS</button>
+            <button onclick="location.href='https://gestapo111.github.io/9.github.io/'">9.LA TIERRA Y EL SER HUMANO</button>
+            <button onclick="location.href='https://gestapo111.github.io/10.github.io/'">10.POBLACIÓN Y MEDIO AMBIENTE</button>
+            <button onclick="location.href='https://gestapo111.github.io/11.github.io/'">11.CONOCIENDO ECOSISTEMAS</button>
+            <button onclick="location.href='https://gestapo111.github.io/12.github.io/'">12.LEGISLACION AMBIENTAL</button>
         </div>
         <footer>
             <p>&copy; Derechos Reservados Prof. Alberto Sanchez</p>
